@startuml Command


scale 2
skinparam DefaultFontName 源ノ角ゴシック Code JP Medium


package Command
{
    abstract class CommandBase
    {
        + IsPlayer
        ~ _execute()
    }

    class Command_Initialize{

    }
    note top : ゲーム開始時に1度だけ呼び、\n各種初期化を行う

    class Command_Attack
    class Command_Play
    class Command_Initialize
    class Command_TurnChange

    class Command_Invoker<<Singleton>>
    {
        + Execute(Command)
    }

    Command_Attack-u-|>CommandBase
    Command_Play-u-|>CommandBase
    Command_Initialize-u-|>CommandBase
    Command_TurnChange-u-|>CommandBase
    Command_Invoker-l-*CommandBase : _execute()

}

package View
{
    class SomeClass
}

package Device
{
    class Hand
    {
        + TryMoveTo()
    }
    class Field
    {
        + Attack(attack,target)
    }
    class TurnManager
    {
        + ChangeTurn()
    }
}

Command_Attack--*Field : 攻撃
Command_Play--*Hand : カードの移動
Command_TurnChange--*TurnManager : ターン変更

SomeClass-->Command_Attack : ①コマンドのインスタンス化
SomeClass-*Command_Invoker : ②コマンド実行依頼

@enduml